--- a/src/components/user/User.css
+++ b/src/components/user/User.css
@@ -1,15 +1,14 @@
 .user {
   background-color: var(--Dark_blue);
   border-radius: 20px;
-  width: 250px;
-  height: 60vh;
+  width: 15vw;
 }
 .userHeader {
   background-color: var(--Blue);
   border-radius: 20px;
   box-sizing: border-box;
   padding: 30px;
-  height: 40vh;
+  height: 45vh;
 }
 .userHeaderImg {
   width: 85px;
@@ -22,13 +21,13 @@
 }
 .userHeaderName p {
   color: var(--Pale_Blue);
-  margin-block: 20px 0px;
+  margin-block: 40px 0px;
 }
 .userHeaderName h1 {
   margin-top: 10px;
   color: white;
   font-weight: 300;
-  font-size: 35px;
+  font-size: 40px;
 }
 .userHeaderImg img {
   width: 80px;
@@ -51,6 +50,7 @@
   color: var(--Desaturated_blue);
   font-size: 18px;
   cursor: pointer;
+  transition: 200ms;
 }
 .userFooter li:hover {
   color: white;
