--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   margin: 0px;
   font-family: "Rubik", sans-serif;
   background-color: var(--Very_dark_blue);
-  height: 100vh;
+  min-height: 100vh;
 }
 #root {
   height: 100%;
@@ -25,7 +25,7 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 }
 .cards {
   margin-left: 2vh;
@@ -33,4 +33,17 @@ body {
   flex-wrap: wrap;
   gap: 2vh;
   width: calc(15vw * 3 + 2 * 2vh);
+}
+
+@media screen and (max-width: 576px) {
+  .cards {
+    margin:2vh 0 0 0vh;
+    width: 90vw;
+  }
+  #userInfo {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
