fix hover on cards

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -40,7 +40,7 @@
   cursor: pointer;
 }
 .cardBody:hover {
-  background-color: #34397b;
+  background-color: #34397b !important;
   transition: 200ms;
 }
 .cardBodyTitle {
